syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "Im.Unity.protobuf_unity.Tests.Runtime.ProtoDemo";
package main;

message DemoSetting
{
  int32 id = 1;
  float a=2;
}